--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
 
 	<header id="header">
-		
+		<div id="header-content" >
+			<div id="Logo" >
+				<h1>
+					LOGO
+				</h1>
+			</div>
+		</div>
 	</header>
 
 	<div id="content" >
