--- a/index.html
+++ b/index.html
@@ -8,23 +8,36 @@
 
 <body>
 
-	<header id="header">
-		<div id="header-content" >
-			<div id="Logo" >
-				<h1>
-					LOGO
-				</h1>
-			</div>
-		</div>
-	</header>
-
 	<div id="content" >
-		
-	</div>
 
-	<footer id="footer" >
-		
-	</footer>
+		<header id="header">
+			<div id="header-content" >
+				<div id="Logo" >
+					<h1>
+						LOGO
+					</h1>
+				</div>
+			</div>
+		</header>
+
+		<div id="content" >
+			<h2>
+				Innhold
+			</h2>
+		</div>
+
+		<footer id="footer" >
+			<div id="footer-content" >
+				<div id="" >
+					<h1>
+						FOOOOOOOOTER
+					</h1>
+				</div>
+			</div>
+		</footer>
+
+	</div>
+	
 
 
 </body>
