--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 						LOGO
 					</h1>
 				</div>
+				<div id="header-nav" >
+					<nav>
+						<ul>
+							<li>Om Oss</li>
+							<li>Produkt</li>
+							<li>Kontakt oss</li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header>
 
