--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Gi oss A, ellers blir det verst for deg Anthony!!</title>
 </head>
 
-<body>
+<body background="bakgrunn.jpeg">
 
 	<div id="content" >
 
@@ -24,6 +24,14 @@
 			<h2>
 				Innhold
 			</h2>
+			<div class="tekst">
+				<p>Her kommer det jo fuckings kongelig innhold, bare vent og se liksom </p>
+			</div>
+			<div class="bilde">
+				<img src="bilde.jpg">
+			</div>
+			
+			
 		</div>
 
 		<footer id="footer" >
