--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 		<header id="header">
 			<div id="header-content" >
 				<div id="Logo" >
-					<h1>
-						LOGO
-					</h1>
+					<img id="logoBilde" src="img/Logo.png">
 				</div>
 				<div id="header-nav" >
 					<nav>
 						<ul>
-							<li>Om Oss</li>
-							<li>Produkt</li>
-							<li>Kontakt oss</li>
+							<li><a>Om oss</a></li>
+							<li><a>Produkt</a></li>
+							<li><a>Kontakt oss</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -33,14 +31,64 @@
 			<h2>
 				Innhold
 			</h2>
+
+			<div class="seksjon" >
+				<div class="seksjonsTekst" >
+					<h3> En overskrift</h3>
+					<p>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+					</p>
+				</div>
+				<div class="seksjonsBilde" >
+					<img id="kvittering" src="img/ReceiptSwiss.jpg">
+				</div>
+				<div class="stopFloat" ></div>
+			</div>
+			
 		</div>
 
 		<footer id="footer" >
 			<div id="footer-content" >
-				<div id="" >
+				<div class="footer-box" >
 					<h1>
-						FOOOOOOOOTER
+						LOGO
 					</h1>
+				</div>
+				<div class="footer-box" >
+					<h3>
+						Kontaktinfo
+					</h3>
+					<p>
+						Epostadresse@gmail.com<br><br>
+						Adresseveien 30 <br><br>
+						929292919
+					</p>
+				</div>
+				<div class="footer-box" >
+					<h3>
+						Sosiale medier
+					</h3>
 				</div>
 			</div>
 		</footer>
