--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
 						hehehehe <br>
 						Masse tekst som skal brukes til eksempel for valg av fonter<br>
 						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg
 					</p>
 				</div>
 				<div class="seksjonsBilde" >
@@ -65,6 +62,38 @@
 				</div>
 				<div class="stopFloat" ></div>
 			</div>
+
+			<div class="seksjon" >
+				<div class="seksjonsTekst" >
+					<h3> En overskrift</h3>
+					<p>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg av fonter<br>
+						hehehehe <br>
+						Masse tekst som skal brukes til eksempel for valg
+					</p>
+				</div>
+				<div class="seksjonsBilde" >
+					<img id="kvittering" src="img/mobilKvittering.jpg">
+				</div>
+				<div class="stopFloat" ></div>
+			</div>
+			
 		</div>
 
 		<footer id="footer" >
