--- a/index.html
+++ b/index.html
@@ -1,130 +1,154 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb" dir="rtl" >
 
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
+	<title>Kvitteringsbasen</title>
+	<meta name="description" content="Kvitteringsbasen. Vi tilbyr en applikasjon for alle dine kvitteringer.">
+	<link rel="icon" type="image/png" href="img/Logo.png">
+
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="main.css">
-	<title>Gi oss A, ellers blir det verst for deg Anthony!!</title>
 </head>
 
 <body>
 
 	<div id="content" >
 
-		<header id="header">
+		<header role="banner" id="header">
 			<div id="header-content" >
 				<div id="Logo" >
-					<img id="logoBilde" src="img/Logo.png">
+					<div class="inner">
+						<img class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+					</div>
 				</div>
 				<div id="header-nav" >
-					<nav>
-						<ul>
-							<li><a>Om oss</a></li>
-							<li><a>Produkt</a></li>
-							<li><a>Kontakt oss</a></li>
-						</ul>
-					</nav>
+					<div class="inner">
+						<nav role="navigation" >
+							<ul>
+								<li><a href="#sekEn" >Om oss</a></li>
+								<li><a href="#sekTo" >Produkt</a></li>
+								<li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
 			</div>
 		</header>
 
-		<div id="middle" >
-			<h2>
-				Innhold
-			</h2>
-
-			<div class="seksjon" >
+		<main role="main" id="middle" >
+			<div id="overskrift">
+				<h1>
+					KvitteringsBasen
+				</h1>
+			</div>
+			<div id="sekEn" class="seksjon" >
 				<div class="seksjonsTekst" >
-					<h3> En overskrift</h3>
-					<p>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg
-					</p>
+					<div class="inner" >
+						<h2> Om oss</h2>
+						<p>
+							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg
+						</p>
+					</div>
 				</div>
 				<div class="seksjonsBilde" >
-					<img id="kvittering" src="img/ReceiptSwiss.jpg">
+					<div class="inner" >	
+						<img class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptSwiss.jpg">
+					</div>
 				</div>
 				<div class="stopFloat" ></div>
 			</div>
 
-			<div class="seksjon" >
+			<div id="sekTo" class="seksjon" >
 				<div class="seksjonsTekst" >
-					<h3> En overskrift</h3>
-					<p>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg av fonter<br>
-						hehehehe <br>
-						Masse tekst som skal brukes til eksempel for valg
-					</p>
+					<div class="inner" >
+						<h2> Våres produkt</h2>
+						<p>
+							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg av fonter<br>
+							hehehehe <br>
+							Masse tekst som skal brukes til eksempel for valg
+						</p>
+					</div>
 				</div>
 				<div class="seksjonsBilde" >
-					<img id="kvittering" src="img/mobilKvittering.jpg">
+					<div class="inner" >	
+						<img class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/mobilKvittering.jpg">
+					</div>
 				</div>
 				<div class="stopFloat" ></div>
 			</div>
 			
-		</div>
+		</main>
 
 		<footer id="footer" >
 			<div id="footer-content" >
-				<div class="footer-box" >
-					<h1>
-						LOGO
-					</h1>
+				<div class="footer-box flef" >
+					<div class="inner">
+						<img class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+					</div>
 				</div>
-				<div class="footer-box" >
-					<h3>
-						Kontaktinfo
-					</h3>
-					<p>
-						Epostadresse@gmail.com<br><br>
-						Adresseveien 30 <br><br>
-						929292919
-					</p>
+
+				<div class="footer-box fmid" >
+					<div class="inner" >
+						<h3>
+							Kontaktinfo
+						</h3>
+						<p>
+							Epostadresse@gmail.com<br><br>
+							Adresseveien 30 <br><br>
+							929292919
+						</p>
+					</div>
 				</div>
-				<div class="footer-box" >
-					<h3>
-						Sosiale medier
-					</h3>
+
+				<div class="footer-box social" >
+					<div class="inner" >
+						<a  alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+						<a alt="link til twittersiden vår" href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+						<a alt="link til instagram-siden vår" href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
+						<a alt="link til pinterestsiden vår" href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"></a>
+					</div>
 				</div>
 			</div>
 		</footer>
 
 	</div>
-	
-
-
 </body>
-
 </html>
