--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 			<div id="header-content" >
 				<div id="Logo" >
 					<div class="inner">
-						<img class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
 					</div>
 				</div>
 				<div id="header-nav" >
 					<div class="inner">
 						<nav role="navigation" >
 							<ul>
-								<li><a href="#sekEn" >Om oss</a></li>
-								<li><a href="#sekTo" >Produkt</a></li>
-								<li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
+								<a href="#sekEn" ><li>Om oss</li></a>
+								<a href="#sekTo" ><li>Produkt</li></a>
+								<a href="#footer" ><li class="sLink">Kontakt Oss</li></a>
 							</ul>
 						</nav>
 					</div>
@@ -46,11 +46,11 @@
 					KvitteringsBasen
 				</h1>
 			</div>
-			<div id="sekEn" class="seksjon" >
+			<section id="sekEn" class="seksjon"  >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2> Om oss</h2>
-						<p>
+						<h2 tabindex="0" > Om oss</h2>
+						<p tabindex="0" >
 							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
 							hehehehe <br>
 							Masse tekst som skal brukes til eksempel for valg av fonter<br>
@@ -75,17 +75,17 @@
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptSwiss.jpg">
+						<img tabindex="0" class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptSwiss.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
-			</div>
+			</section>
 
-			<div id="sekTo" class="seksjon" >
+			<section id="sekTo" class="seksjon" >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2> Våres produkt</h2>
-						<p>
+						<h2 tabindex="0" > Våres produkt</h2>
+						<p tabindex="0" >
 							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
 							Masse tekst som skal brukes til eksempel for valg av fonter<br>
 							hehehehe <br>
@@ -109,11 +109,11 @@
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/mobilKvittering.jpg">
+						<img tabindex="0" class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/mobilKvittering.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
-			</div>
+			</section>
 			
 		</main>
 
@@ -121,18 +121,22 @@
 			<div id="footer-content" >
 				<div class="footer-box flef" >
 					<div class="inner">
-						<img class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
 					</div>
 				</div>
 
 				<div class="footer-box fmid" >
 					<div class="inner" >
-						<h3>
+						<h3 tabindex="0" >
 							Kontaktinfo
 						</h3>
-						<p>
-							Epostadresse@gmail.com<br><br>
-							Adresseveien 30 <br><br>
+						<p tabindex="0" >
+							Epostadresse@gmail.com
+						</p>
+						<p tabindex="0" >
+							Adresseveien 30
+						</p>
+						<p tabindex="0" >
 							929292919
 						</p>
 					</div>
@@ -140,7 +144,7 @@
 
 				<div class="footer-box social" >
 					<div class="inner" >
-						<a  alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+						<a alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
 						<a alt="link til twittersiden vår" href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
 						<a alt="link til instagram-siden vår" href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
 						<a alt="link til pinterestsiden vår" href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"></a>
