Oppdatert logo, gjort den mørkere. Også byttet til denne versjonen i footer. Se hva dere syns..

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div id="header-content" >
 				<div id="Logo" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_d_trans2.png">
 					</div>
 				</div>
 				<div id="header-nav" >
@@ -121,7 +121,7 @@
 			<div id="footer-content" >
 				<div class="footer-box flef" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/Logo.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_d_trans2.png">
 					</div>
 				</div>
 
