Endret litt på struktur, font og logo i både header og footer.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<meta name="description" content="Kvitteringsbasen. Vi tilbyr en applikasjon for alle dine kvitteringer.">
 	<link rel="icon" type="image/png" href="img/Logo.png">
 
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="main.css">
 </head>
 
@@ -23,16 +22,16 @@
 			<div id="header-content" >
 				<div id="Logo" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_d_trans2.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3.png">
 					</div>
 				</div>
 				<div id="header-nav" >
 					<div class="inner">
 						<nav role="navigation" >
 							<ul>
-								<a href="#sekEn" ><li>Om oss</li></a>
-								<a href="#sekTo" ><li>Produkt</li></a>
-								<a href="#footer" ><li class="sLink">Kontakt Oss</li></a>
+                                                            <li><a href="#sekEn" >Om oss</a></li>
+                                                            <li><a href="#sekTo" >Produkt</a></li>
+                                                            <li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -121,7 +120,7 @@
 			<div id="footer-content" >
 				<div class="footer-box flef" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_d_trans2.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3_inverted.png">
 					</div>
 				</div>
 
