--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<meta name="description" content="Kvitteringsbasen. Vi tilbyr en applikasjon for alle dine kvitteringer.">
 	<link rel="icon" type="image/png" href="img/Logo.png">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="main.css">
 </head>
 
@@ -29,9 +28,9 @@
 					<div class="inner">
 						<nav role="navigation" >
 							<ul>
-                                                            <li><a href="#sekEn" >Om oss</a></li>
-                                                            <li><a href="#sekTo" >Produkt</a></li>
-                                                            <li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
+                                <li><a href="#sekEn" >Om oss</a></li>
+                                <li><a href="#sekTo" >Produkt</a></li>
+                                <li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -143,10 +142,10 @@
 
 				<div class="footer-box social" >
 					<div class="inner" >
-						<a alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-						<a alt="link til twittersiden vår" href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-						<a alt="link til instagram-siden vår" href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
-						<a alt="link til pinterestsiden vår" href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"></a>
+						<a alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa"><img class="fa-facebook" src="img/facebook.png"></a>
+						<a alt="link til twittersiden vår" href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img class="fa-facebook" src="img/twitter.png"></a>
+						<a alt="link til instagram-siden vår" href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img class="fa-facebook" src="img/instagram.png"></a>
+						<a alt="link til pinterestsiden vår" href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img class="fa-facebook" src="img/pinterest.png"></a>
 					</div>
 				</div>
 			</div>
