--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 
 				<div class="footer-box social" >
 					<div class="inner" >
-						<a alt="link til facebooksiden vår" href="https://www.facebook.com/" target="_blank" class="fa"><img class="fa-facebook" src="img/facebook.png"></a>
-						<a alt="link til twittersiden vår" href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img class="fa-facebook" src="img/twitter.png"></a>
-						<a alt="link til instagram-siden vår" href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img class="fa-facebook" src="img/instagram.png"></a>
-						<a alt="link til pinterestsiden vår" href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img class="fa-facebook" src="img/pinterest.png"></a>
+						<a href="https://www.facebook.com/" target="_blank" class="fa"><img alt="link til facebooksiden vår" class="fa-facebook" src="img/facebook.png"></a>
+						<a href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img alt="link til twittersiden vår" class="fa-facebook" src="img/twitter.png"></a>
+						<a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img alt="link til instagram-siden vår" class="fa-facebook" src="img/instagram.png"></a>
+						<a href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img alt="link til pinterestsiden vår" class="fa-facebook" src="img/pinterest.png"></a>
 					</div>
 				</div>
 			</div>
