--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
 
 <body>
 
+		<div id="header-background" ></div>
+
 	<div id="content" >
 
 		<header role="banner" id="header">
 			<div id="header-content" >
 				<div id="Logo" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3.png">
+						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3_inverted.png">
 					</div>
 				</div>
 				<div id="header-nav" >
 					<div class="inner">
 						<nav role="navigation" >
 							<ul>
-                                <li><a href="#sekEn" >Om oss</a></li>
-                                <li><a href="#sekTo" >Produkt</a></li>
+                                <li><a href="#sekEn" >Problem</a></li>
+                                <li><a href="#sekTo" >Motivasjon</a></li>
+                                <li><a href="#sekTre" >Produkt</a></li>
                                 <li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
 							</ul>
 						</nav>
@@ -47,70 +50,85 @@
 			<section id="sekEn" class="seksjon"  >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2 tabindex="0" > Om oss</h2>
+						<h2 tabindex="0" >Problem</h2>
 						<p tabindex="0" >
-							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg
+							Du går på butikken, handler varer, betaler i kassen og går hjem. Hjemme
+							pakker du ut varene, og ved middag oppdager du at indrefileten er utgått på dato.
+							Du drar tilbake til butikken, klager på varen, men får ikke byttet den
+							fordi du mangler kvittering. Oppgitt og sint brøler du "<strong>her skal jeg aldri
+							handle igjen!</strong>" til den stakkars kassereren som kun følger butikkens retningslinjer.
+						</p>
+						<p>
+							Kvitteringen er din garanti for at du skal kunne bytte ødelagte/feil varer,
+							men det krever at du tar med deg denne når du går ut av butikken,
+							men også at du tar vare på denne i ettertid. Dette er ikke bare upraktisk
+							det også lite miljøvennlig å alltid måtte skrive ut en liten lapp som garanti.
+						</p>
+						<p>
+							Med dagens teknologi må det da være mulig å ordne en bedre løsning?
 						</p>
 					</div>
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img tabindex="0" class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptSwiss.jpg">
+						<img tabindex="0" class="kvittering mess" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptMess.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
 			</section>
 
-			<section id="sekTo" class="seksjon" >
+			<section id="sekTo" class="seksjon"  >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2 tabindex="0" > Våres produkt</h2>
-						<p tabindex="0" >
-							Masse tekst som skal brukes til eksempel for valg asd asdasd asdav fonter<br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg av fonter<br>
-							hehehehe <br>
-							Masse tekst som skal brukes til eksempel for valg
+						<h2 tabindex="0" >Motivasjon</h2>
+						<p>
+							Basert på data samlet inn av Will Hines i Huffington Post koster USA rundt 950 liter olje, 10 millioner trær og 4 milliarder liter vann, og dette genererer rundt 680 millioner kilo med søppel årlig. For å sette dette i perspektiv kan vi se på statistikken over hvor mye søppel som ble kastet i USA i 2013, og dette tallet er på svimlende 250 millioner tonn. Basert på dette tallet er kvitteringer hele 2,72% av dette, og det er enormt mye!
 						</p>
+						<p>
+							 Det vil si at vi har mulighet til å kvitte oss med mye søppelproduksjon bare ved å løse dette problemet. Men hvordan skal dette gjøres?
+						</p>
+					</div>
+				</div>
+
+				<div class="stopFloat" ></div>
+			</section>
+
+			<section id="sekTre" class="seksjon" >
+				<div class="seksjonsTekst" >
+					<div class="inner" >
+						<h2 tabindex="0" > Vårt produkt</h2>
+						<p tabindex="0" >
+							Vi satt oss ned og diskuterte muligheter for å løse dette, og produktet vi har kommet opp med kaller vi for <strong>KvitteringsBasen</strong> – en mobilapplikasjon med mål om å erstatte alle kvitteringer i papirformat.
+						</p>
+						<p>
+							Ideen er enkel; ved å registrere en bruker og legge inn kortet ditt i applikasjonen vil kvitteringen enkelt sendes inn i applikasjonen og sorteres etter hvor man har handlet. Med dette verktøyet kan man også se på en statistikk over hvor mye penger man har brukt på de ulike butikkene man har handlet i, samt hvilke varer man har brukt penger på.
+						</p>
+						<p>
+							Vår idé er ikke at man over natta skal kutte ut papirkvitteringene fullstendig, men at man på noen år skal få ned papirkvitteringene med 80%. Derfor mener vi det fortsatt skal være mulig å få papirkvitteringen i kassa, og dette er også med tanke på at man fremdeles betaler kontant i noen tilfeller. Derfor vil vi legge til en QR-kode på kvitteringen slik at det er mulig å «scanne» denne og få kvitteringen lagt inn elektronisk. I tillegg vil det også være mulig for dem som ikke ønsker å bruke applikasjonen å heller ta papirkvitteringen.
+						</p>
+
 					</div>
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img tabindex="0" class="kvittering" alt="Bilde av en ordiner kvittering i papirform" src="img/mobilKvittering.jpg">
+						<img tabindex="0" class="kvittering" alt="Bilde av mange kvitteringer i papirform" src="img/mobilKvittering.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
+			</section>
+
+			<section id="sekFire" class="seksjon" >
+				<div class="seksjonRef" >
+					<div class="inner" >
+
+						<h2 tabindex="0" >Referanser</h2>
+						<p>
+						<a alt="link til huffingtonpost" target="_blank" href="https://www.huffingtonpost.com/will-hines/going-paperless-the-hidde_b_3008587.html">Huffingtonpost - Going Paperless: The Hidden Cost of a Receipt</a><br>
+						<a alt="link til Flexreceipts" target="_blank" href="http://www.flexreceipts.com/blog/the-environmental-impact-of-the-paper-receipt-and-why-you-should-go-digital/">Flexreceipts - The environmental impact of the paper receipt</a><br>
+						<a alt="link til Sustainability" target="_blank" href="https://sustainability.ncsu.edu/blog/changeyourstate/bpa-receipts/">Sustainability - Why You Need to Say No to Receipts</a>
+						</p>
+					</div>
+				</div>
 			</section>
 			
 		</main>
@@ -142,10 +160,10 @@
 
 				<div class="footer-box social" >
 					<div class="inner" >
-						<a href="https://www.facebook.com/" target="_blank" class="fa"><img alt="link til facebooksiden vår" class="fa-facebook" src="./img/facebook.png"/></a>
-						<a href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img alt="link til twittersiden vår" class="fa-facebook" src="./img/twitter.png"/></a>
-						<a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img alt="link til instagram-siden vår" class="fa-facebook" src="./img/instagram.png"/></a>
-						<a href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img alt="link til pinterestsiden vår" class="fa-facebook" src="./img/pinterest.png"/></a>
+						<a href="https://www.facebook.com/" target="_blank" class="fa"><img alt="link til facebooksiden vår" class="fa-facebook" src="./img/Facebook.png"/></a>
+						<a href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img alt="link til twittersiden vår" class="fa-facebook" src="./img/Twitter.png"/></a>
+						<a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img alt="link til instagram-siden vår" class="fa-facebook" src="./img/Instagram.png"/></a>
+						<a href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img alt="link til pinterestsiden vår" class="fa-facebook" src="./img/Pinterest.png"/></a>
 					</div>
 				</div>
 			</div>
