Oversatt 2/3 til engelsk. tabindex på alle elementer

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<nav role="navigation" >
 							<ul>
                                 <li><a href="#sekEn" >Problem</a></li>
-                                <li><a href="#sekTo" >Motivasjon</a></li>
-                                <li><a href="#sekTre" >Produkt</a></li>
-                                <li class="sLink"><a href="#footer" >Kontakt Oss</a></li>
+                                <li><a href="#sekTo" >Motivation</a></li>
+                                <li><a href="#sekTre" >Product</a></li>
+                                <li class="sLink"><a href="#footer" >Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -43,7 +43,7 @@
 
 		<main role="main" id="middle" >
 			<div id="overskrift">
-				<h1>
+				<h1 tabindex="0" >
 					KvitteringsBasen
 				</h1>
 			</div>
@@ -52,20 +52,13 @@
 					<div class="inner" >
 						<h2 tabindex="0" >Problem</h2>
 						<p tabindex="0" >
-							Du går på butikken, handler varer, betaler i kassen og går hjem. Hjemme
-							pakker du ut varene, og ved middag oppdager du at indrefileten er utgått på dato.
-							Du drar tilbake til butikken, klager på varen, men får ikke byttet den
-							fordi du mangler kvittering. Oppgitt og sint brøler du "<strong>her skal jeg aldri
-							handle igjen!</strong>" til den stakkars kassereren som kun følger butikkens retningslinjer.
+							You’re at the store, buying dinner, paying your hard-earned cash and leave. At home you empty the shopping bag only to realise the expiration date has expired. You return to the store to complain but you don’t get your money back because you don’t have the receipt. Dismissed and angry you start yelling at the cashier. "<strong>You just lost a customer!</strong>". You do this despite the cashier only following regulations.
 						</p>
-						<p>
-							Kvitteringen er din garanti for at du skal kunne bytte ødelagte/feil varer,
-							men det krever at du tar med deg denne når du går ut av butikken,
-							men også at du tar vare på denne i ettertid. Dette er ikke bare upraktisk
-							det også lite miljøvennlig å alltid måtte skrive ut en liten lapp som garanti.
+						<p tabindex="0" >
+							The receipt is your guarantee to get a new commodity or your money back. But it requires you not only to take it with you from the store, but also to take care of it. This can be impractical and bad for the environment as well.
 						</p>
-						<p>
-							Med dagens teknologi må det da være mulig å ordne en bedre løsning?
+						<p tabindex="0" >
+							With today’s technology this should be a problem of the past?
 						</p>
 					</div>
 				</div>
@@ -80,12 +73,12 @@
 			<section id="sekTo" class="seksjon"  >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2 tabindex="0" >Motivasjon</h2>
-						<p>
-							Basert på data samlet inn av Will Hines i Huffington Post koster USA rundt 950 liter olje, 10 millioner trær og 4 milliarder liter vann, og dette genererer rundt 680 millioner kilo med søppel årlig. For å sette dette i perspektiv kan vi se på statistikken over hvor mye søppel som ble kastet i USA i 2013, og dette tallet er på svimlende 250 millioner tonn. Basert på dette tallet er kvitteringer hele 2,72% av dette, og det er enormt mye!
+						<h2 tabindex="0" >Motivation</h2>
+						<p tabindex="0" >
+							Based on data collected by Will Hines of the Huffington Post it shows that USA spends 950-million-liter oil, 10 million trees and 4 billion liter of water. This generates about 680million kilos of trash every year.To put this in perspective we can look at how much trash USA tossed in 2013, which is 250 million ton. And of all this receipt is as much as 2.72%, which is a lot.
 						</p>
-						<p>
-							 Det vil si at vi har mulighet til å kvitte oss med mye søppelproduksjon bare ved å løse dette problemet. Men hvordan skal dette gjøres?
+						<p tabindex="0" >
+							This means that by replace the established receipt-system with a digital one, we save the environment 2,72% of 250milllon ton of thrash. But how will we do this?
 						</p>
 					</div>
 				</div>
@@ -100,10 +93,10 @@
 						<p tabindex="0" >
 							Vi satt oss ned og diskuterte muligheter for å løse dette, og produktet vi har kommet opp med kaller vi for <strong>KvitteringsBasen</strong> – en mobilapplikasjon med mål om å erstatte alle kvitteringer i papirformat.
 						</p>
-						<p>
+						<p tabindex="0" >
 							Ideen er enkel; ved å registrere en bruker og legge inn kortet ditt i applikasjonen vil kvitteringen enkelt sendes inn i applikasjonen og sorteres etter hvor man har handlet. Med dette verktøyet kan man også se på en statistikk over hvor mye penger man har brukt på de ulike butikkene man har handlet i, samt hvilke varer man har brukt penger på.
 						</p>
-						<p>
+						<p tabindex="0" >
 							Vår idé er ikke at man over natta skal kutte ut papirkvitteringene fullstendig, men at man på noen år skal få ned papirkvitteringene med 80%. Derfor mener vi det fortsatt skal være mulig å få papirkvitteringen i kassa, og dette er også med tanke på at man fremdeles betaler kontant i noen tilfeller. Derfor vil vi legge til en QR-kode på kvitteringen slik at det er mulig å «scanne» denne og få kvitteringen lagt inn elektronisk. I tillegg vil det også være mulig for dem som ikke ønsker å bruke applikasjonen å heller ta papirkvitteringen.
 						</p>
 
@@ -121,7 +114,7 @@
 				<div class="seksjonRef" >
 					<div class="inner" >
 
-						<h2 tabindex="0" >Referanser</h2>
+						<h2 tabindex="0" >References</h2>
 						<p>
 						<a alt="link til huffingtonpost" target="_blank" href="https://www.huffingtonpost.com/will-hines/going-paperless-the-hidde_b_3008587.html">Huffingtonpost - Going Paperless: The Hidden Cost of a Receipt</a><br>
 						<a alt="link til Flexreceipts" target="_blank" href="http://www.flexreceipts.com/blog/the-environmental-impact-of-the-paper-receipt-and-why-you-should-go-digital/">Flexreceipts - The environmental impact of the paper receipt</a><br>
@@ -144,7 +137,7 @@
 				<div class="footer-box fmid" >
 					<div class="inner" >
 						<h3 tabindex="0" >
-							Kontaktinfo
+							Contact info
 						</h3>
 						<p tabindex="0" >
 							Epostadresse@gmail.com
