Oversatt 3/3 til engelsk. Mangler alt-tekst

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
 			<section id="sekTre" class="seksjon" >
 				<div class="seksjonsTekst" >
 					<div class="inner" >
-						<h2 tabindex="0" > Vårt produkt</h2>
+						<h2 tabindex="0" >Our product</h2>
 						<p tabindex="0" >
-							Vi satt oss ned og diskuterte muligheter for å løse dette, og produktet vi har kommet opp med kaller vi for <strong>KvitteringsBasen</strong> – en mobilapplikasjon med mål om å erstatte alle kvitteringer i papirformat.
+							We sat down to discuss the possibilitis to solve this problem and came up with a product. <strong>kvitteringsBasen</strong> (the ReceiptBase). A mobile application with the goal of replace paper based receipts.
 						</p>
 						<p tabindex="0" >
-							Ideen er enkel; ved å registrere en bruker og legge inn kortet ditt i applikasjonen vil kvitteringen enkelt sendes inn i applikasjonen og sorteres etter hvor man har handlet. Med dette verktøyet kan man også se på en statistikk over hvor mye penger man har brukt på de ulike butikkene man har handlet i, samt hvilke varer man har brukt penger på.
+							The idea is simple; by register as a user and apply you visa to your app the receipts will be stored in a sky-based database and viewed in the app. With this solution more possibilities become available. For example, make an overview over money spent, what it is spent on and where it is spent.
 						</p>
 						<p tabindex="0" >
-							Vår idé er ikke at man over natta skal kutte ut papirkvitteringene fullstendig, men at man på noen år skal få ned papirkvitteringene med 80%. Derfor mener vi det fortsatt skal være mulig å få papirkvitteringen i kassa, og dette er også med tanke på at man fremdeles betaler kontant i noen tilfeller. Derfor vil vi legge til en QR-kode på kvitteringen slik at det er mulig å «scanne» denne og få kvitteringen lagt inn elektronisk. I tillegg vil det også være mulig for dem som ikke ønsker å bruke applikasjonen å heller ta papirkvitteringen.
+							The plan isn’t to replace paper completely overnight. More to decrease the paper usage with about 80%. Paper must be a option for people that are paying in cash. Paper receipts should contain QR-codes so you can manually collect them yourself if you want it digital. This leaves people with opportunity to choose for themselves.
 						</p>
 
 					</div>
