Oversatt alt-tekst

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div id="header-content" >
 				<div id="Logo" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3_inverted.png">
+						<img tabindex="0" class="logoBilde" alt="The logo of Kvitteringsbasen. The name in text upon a illustratet receipt." src="img/logo_3_inverted.png">
 					</div>
 				</div>
 				<div id="header-nav" >
@@ -64,7 +64,7 @@
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img tabindex="0" class="kvittering mess" alt="Bilde av en ordiner kvittering i papirform" src="img/ReceiptMess.jpg">
+						<img tabindex="0" class="kvittering mess" alt="A picture of multiple receipts in paperform stacked in a mess." src="img/ReceiptMess.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
@@ -104,7 +104,7 @@
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img tabindex="0" class="kvittering" alt="Bilde av mange kvitteringer i papirform" src="img/mobilKvittering.jpg">
+						<img tabindex="0" class="kvittering" alt="Picture of the application we're planing to develop." src="img/mobilKvittering.jpg">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
@@ -116,9 +116,9 @@
 
 						<h2 tabindex="0" >References</h2>
 						<p>
-						<a alt="link til huffingtonpost" target="_blank" href="https://www.huffingtonpost.com/will-hines/going-paperless-the-hidde_b_3008587.html">Huffingtonpost - Going Paperless: The Hidden Cost of a Receipt</a><br>
-						<a alt="link til Flexreceipts" target="_blank" href="http://www.flexreceipts.com/blog/the-environmental-impact-of-the-paper-receipt-and-why-you-should-go-digital/">Flexreceipts - The environmental impact of the paper receipt</a><br>
-						<a alt="link til Sustainability" target="_blank" href="https://sustainability.ncsu.edu/blog/changeyourstate/bpa-receipts/">Sustainability - Why You Need to Say No to Receipts</a>
+						<a alt="link to huffingtonpost" target="_blank" href="https://www.huffingtonpost.com/will-hines/going-paperless-the-hidde_b_3008587.html">Huffingtonpost - Going Paperless: The Hidden Cost of a Receipt</a><br>
+						<a alt="link to Flexreceipts" target="_blank" href="http://www.flexreceipts.com/blog/the-environmental-impact-of-the-paper-receipt-and-why-you-should-go-digital/">Flexreceipts - The environmental impact of the paper receipt</a><br>
+						<a alt="link to Sustainability" target="_blank" href="https://sustainability.ncsu.edu/blog/changeyourstate/bpa-receipts/">Sustainability - Why You Need to Say No to Receipts</a>
 						</p>
 					</div>
 				</div>
@@ -130,7 +130,7 @@
 			<div id="footer-content" >
 				<div class="footer-box flef" >
 					<div class="inner">
-						<img tabindex="0" class="logoBilde" alt="Bilde Kvitteringsbasen sin logo. Navnet som tekst som ligger over en illustrert kvittering" src="img/logo_3_inverted.png">
+						<img tabindex="0" class="logoBilde" alt="The logo of Kvitteringsbasen. The name in text upon a illustratet receipt" src="img/logo_3_inverted.png">
 					</div>
 				</div>
 
@@ -153,10 +153,10 @@
 
 				<div class="footer-box social" >
 					<div class="inner" >
-						<a href="https://www.facebook.com/" target="_blank" class="fa"><img alt="link til facebooksiden vår" class="fa-facebook" src="./img/Facebook.png"/></a>
-						<a href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img alt="link til twittersiden vår" class="fa-facebook" src="./img/Twitter.png"/></a>
-						<a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img alt="link til instagram-siden vår" class="fa-facebook" src="./img/Instagram.png"/></a>
-						<a href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img alt="link til pinterestsiden vår" class="fa-facebook" src="./img/Pinterest.png"/></a>
+						<a href="https://www.facebook.com/" target="_blank" class="fa"><img alt="link to our facebook page." class="fa-facebook" src="./img/Facebook.png"/></a>
+						<a href="https://twitter.com/" target="_blank" class="fa fa-twitter"><img alt="link to our twitter page." class="fa-facebook" src="./img/Twitter.png"/></a>
+						<a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"><img alt="link to our instagram page." class="fa-facebook" src="./img/Instagram.png"/></a>
+						<a href="https://no.pinterest.com/" target="_blank" class="fa fa-pinterest"><img alt="link to our pinterest page." class="fa-facebook" src="./img/Pinterest.png"/></a>
 					</div>
 				</div>
 			</div>
