--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 				<div class="seksjonsBilde" >
 					<div class="inner" >	
-						<img tabindex="0" class="kvittering" alt="Picture of the application we're planing to develop." src="img/mobilKvittering.jpg">
+						<img tabindex="0" id="app" class="kvittering" alt="Picture of the application we're planing to develop." src="img/mobilKvittering.png">
 					</div>
 				</div>
 				<div class="stopFloat" ></div>
