--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="inner" >
 						<h2 tabindex="0" >Our product</h2>
 						<p tabindex="0" >
-							We sat down to discuss the possibilitis to solve this problem and came up with a product. <strong>kvitteringsBasen</strong> (the ReceiptBase). A mobile application with the goal of replace paper based receipts.
+							We sat down to discuss the possibilitis to solve this problem and came up with a product. <strong>KvitteringsBasen</strong> (the ReceiptBase). A mobile application with the goal of replace paper based receipts.
 						</p>
 						<p tabindex="0" >
 							The idea is simple; by register as a user and apply you visa to your app the receipts will be stored in a sky-based database and viewed in the app. With this solution more possibilities become available. For example, make an overview over money spent, what it is spent on and where it is spent.
